fix issue where scrollbar always showed up for code even when the screen was large enough

--- a/assets/less/_code.less
+++ b/assets/less/_code.less
@@ -15,7 +15,11 @@
         .container;
         .chinese-character('碼', @contrast);
         color: @regular-text;
-        overflow-x: scroll;
+
+        code {
+            display: block;
+            overflow-x: auto;
+        }
 
         .k {
             color: @keyword-color;
